<resources>
    <string name="app_name">CloudDriveClient</string>
    <string name="ServerName">Nazwa dysku</string>
    <string name="serverAddress">adres IP</string>
    <string name="serverPort">port</string>
    <string name="addServerDialog">Dodaj nowy dysk</string>
    <string name="downloadComplete">Pobieranie ukończone - plik zapisano w standardowym katalogu</string>
    <string name="delete">Usuń</string>
    <string name="rename">Zmień nazwę...</string>
    <string name="OK">OK</string>
    <string name="back">wstecz</string>
    <string name="fileDetails">Szczegóły pliku</string>
    <string name="shareVia"> Udostępnij plik za pomocą:</string>
    <string name="enterPass">Podaj dane dostępu dysku</string>
    <string name="enterFolderName">nazwa...</string>
    <string name="userName">nazwa użytkownika</string>
    <string name="password">hasło</string>
    <string name="wrongPassword">Podane dane są błędne!</string>
    <string name="addFolder">Dodaj folder</string>
    <string name="filter">Filtruj</string>
    <string name="history">Pokaż historię</string>
    <string name="images">Obrazy</string>
    <string name="audio"> Dźwięki</string>
    <string name="docs">Dokumenty</string>
    <string name="exec">Programy</string>
    <string name="folders">Katalogi</string>
    <string name="others">Inne</string>
    <string name="clear">Wyczyść</string>
    <string name="connectionError">Błąd łączenia z serwerem!</string>
    <string name="fileNameError">Błędna nazwa!</string>
    <string name="emptyName">Nazwa nie może być pusta!</string>
    <string name="emptyAddress">Adres nie może być pusty!</string>
    <string name="serverUnreacheable">Dysk nie osiągalny!</string>
    <string name="isBaseFolder">Jesteś już w folderze bazowym!</string>
    <string name="fileError">Błąd plików!</string>
    <string name="logsError">Błąd pobieranie historii operacji</string>
</resources>
