<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal"
        android:text="@string/enterPass"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/userName"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:hint="@string/userName"/>
    <EditText
        android:id="@+id/password"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

</LinearLayout>